--- a/DragonFly/Info.plist
+++ b/DragonFly/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Phenomena-Light.otf</string>
+		<string>Phenomena-ExtraBold.otf</string>
+		<string>Phenomena-Bold.otf</string>
+		<string>Phenomena-Regular.otf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
